[package]
name = "sha"
version = "0.3.0"
authors = ["Andrew Robbins <and_j_rob@yahoo.com>"]
license = "LGPL-3.0+"
homepage = "https://andydude.github.io/rust-sha/sha/index.html"
repository = "https://github.com/andydude/rust-sha/"
description = "Rust Secure Hash Algorithm (SHA) Library."
readme = "README.md"

[dependencies]
bswap = "*"
rustc-serialize = "*"

[lib]
name = "sha"
